Refactored Logger methods. Added connectedTo/connectedFrom logging to peerProcess/Server